--- a/src/assets/font/iconfont/demo_symbol.html
+++ b/src/assets/font/iconfont/demo_symbol.html
@@ -35,6 +35,14 @@
                     <div class="fontclass">#icon-cart</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-shanchuicon"></use>
+                    </svg>
+                    <div class="name">delete</div>
+                    <div class="fontclass">#icon-shanchuicon</div>
+                </li>
+            
         </ul>
 
 
