--- a/src/assets/font/iconfont/demo_unicode.html
+++ b/src/assets/font/iconfont/demo_unicode.html
@@ -38,6 +38,12 @@
                     <div class="code">&amp;#xe60c;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe694;</i>
+                    <div class="name">delete</div>
+                    <div class="code">&amp;#xe694;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
