--- a/src/assets/font/iconfont/demo_fontclass.html
+++ b/src/assets/font/iconfont/demo_fontclass.html
@@ -18,6 +18,12 @@
                     <div class="fontclass">.icon-cart</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-shanchuicon"></i>
+                    <div class="name">delete</div>
+                    <div class="fontclass">.icon-shanchuicon</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
